# lego-songbook-archived

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml  requirements.txt  sing.py  songbook.db  tasks.py  tests.py  tox.ini
.github/workflows/: pythonapp.yml
data/csv/: arrangement.csv  artist.csv  hymn.csv  key.csv  person.csv  role.csv  song.csv  worship.csv  worship_arrangement.csv  worship_song.csv
db/csv/: hymn.csv
docs/: Gemfile  _config.yml  about.md  all-songs.md  index.md  past-services.md
docs/_data/: past_services.yaml  songs.csv  songs.yaml
docs/_includes/: head.html  sidebar.html
docs/_layouts/: past-service.html
docs/_posts/: 2019-10-07-welcome-to-jekyll.markdown  2019-10-08-welcome-to-jekyll.markdown
docs/past-services/: 2019-09-22.md  2019-10-06.md  2019-10-13.md  2019-10-20.md  2019-10-27.md  2019-11-03.md  2019-11-10.md  2019-11-17.md  2019-11-24.md  2019-12-01.md  2019-12-08.md  2019-12-15.md
docs/public/css/fonts/: stylesheet.css
src/songbook/: __main__.py  console.py  database.py  hymn.py  io.py  models.py  types.py
src/songbook/console/: __init__.py  _add.py  _export.py  _import.py  _init.py  _remove.py  _sync.py  _update.py  _view.py
tests/: conftest.py  test_basic.py  test_io.py  test_model_schema.py  test_models.py
