[tool.poetry]
name = "lego-songbook"
version = "19.10.0de2"
description = "The Songbook for our beloved Lego small group."
authors = ["Kip Yin <28321392+kipyin@users.noreply.github.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.6"
records = "^0.5.3"
peewee = "^3.11.2"
click = "^7.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2.1"
black = "^19.3b0"
isort = "^4.3.21"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
